...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity='center'
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_gravity="center">
            </Spinner>
            <ImageButton
                android:id="@+id/buttonRemoveLocation"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity='center'
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonViewWeather"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="View Weather" />
            <Button
                android:id="@+id/buttonViewMap"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="View Map" />
        </LinearLayout>
        <Button
            android:id="@+id/buttonAddLocation"
...
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change UI Theme" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/logout" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
...
