...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CityNamePlaceholder"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/locationGeoCoordinate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="LocationLatitudeLongitude"
            android:textSize="20dp"
            android:layout_marginBottom="15dp"
...
