<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="40dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/register"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="36sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:background="@color/cardview_shadow_end_color"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_height="50dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:background="@color/cardview_shadow_end_color"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                android:layout_height="50dp"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        Todo: create database to store user name-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:hint="Name"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:background="@color/cardview_shadow_end_color"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                android:layout_height="50dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_register"
            android:text="@string/register"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/purple_200"
            app:cornerRadius = "20dp"
            android:layout_marginTop="60dp"/>
        <TextView
            android:id="@+id/loginNow"
            android:text="Return to Login"
            android:gravity="center"
            android:textSize="14dp"
            android:textAlignment="center"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>